--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,7 +2,7 @@
     height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
 
-    background-image: url('../../public/fondo-login-signup.jpg');
+    background-image: url('../../public/fondo.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position:center 25%;
