--- a/src/styles/Forms.scss
+++ b/src/styles/Forms.scss
@@ -35,6 +35,7 @@
                width: 80%;
                height: 30px;
                border-radius: 5px;
+               padding: 5px;
             }
 
             label{
