--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -53,6 +53,12 @@
                 &.userName{
                     color: #1B9C85;
                     font-style: italic;
+                    font-weight: bold;
+                }
+                &.exit{
+                    &:hover{
+                        color: #B31312;
+                    }
                 }
 
             }
@@ -116,3 +122,34 @@
     }
 }
 
+
+
+/*ESTILOS DEL CONTENEDOR DE LAS VENTAS*/
+.containerSale{
+    width: 95%;
+    margin: 2.5%;
+    background-color: rgba(33, 33, 33, 0.8);;
+    color: #FAFAFA;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 30% 70%;
+
+    .dataClient{
+
+    }
+}
+
+
+/*STYLES OF FOOTER*/
+.footerMain{
+    background-color: rgba(33, 33, 33, 0.8);
+    position: fixed;
+    width: 100%;
+    height: 3%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    left: 0;
+    bottom: 0;
+    color:#FAFAFA;
+}
