--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -19,9 +19,16 @@
     /* .item engloba tanto a los items de la seccionProfile y la sections*/
     .item{
         cursor: pointer;
-        
-        &:hover{
-            color:#1B9C85;
+
+        .link{
+            text-decoration: none;
+            color:#FAFAFA;
+            &:focus{
+                color: inherit;
+            }
+            &:hover{
+                color:#1B9C85;
+            }
         }
     }
 
@@ -56,8 +63,11 @@
                     font-weight: bold;
                 }
                 &.exit{
-                    &:hover{
-                        color: #B31312;
+                    .link{
+                        color:#B31312;
+                        &:hover{
+                            color: #423f3f;
+                        }
                     }
                 }
 
@@ -96,7 +106,12 @@
         }
         .exitMenuDrop{
             border-top:1px solid #423f3f;
-            color: #B31312;
+            .link{
+                color:#B31312;
+                &:hover{
+                    color: #423f3f;
+                }
+            }
         }
     }
 }
@@ -134,9 +149,6 @@
     grid-template-columns: 100%;
     grid-template-rows: 30% 70%;
 
-    .dataClient{
-
-    }
 }
 
 
@@ -145,7 +157,7 @@
     background-color: rgba(33, 33, 33, 0.8);
     position: fixed;
     width: 100%;
-    height: 3%;
+    height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
