--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -140,21 +140,22 @@ $colorNav: #212121;
         display: flex;
         justify-content: end;
     }
+
 }
+
 
 
 
 /*ESTILOS DEL CONTENEDOR DE LAS VENTAS*/
 .containerSale{
     width: 95%;
-    margin: 2.5%;
+    margin: 2%;
     height: 80vh;
     background-color: $colorOpacity;
     color: $colorText;
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 30% 60%;
-    row-gap: 10%;
+    grid-template-rows: 20% 80%;
 
     /*ESTILOS CONTENEDOR DE LOS DATOS DEL CLIENTE*/
     .dataCostumer{
@@ -182,7 +183,7 @@ $colorNav: #212121;
         }
 
         .searchCostumer{
-            .searchID{
+            #searchID{
                 font-size: 20px;
                 border: none;
             }
@@ -196,13 +197,50 @@ $colorNav: #212121;
             }
         }
 
-        .infoDocument{
-
-        }
     }
 
-    .sale{
-        height: fit-content;
+    .Sale{
+        height: 100%;
+        display: grid;
+        grid-template-rows:10% 70% 20%;
+        grid-template-columns: 100%;
+
+        input{
+            height: 25px;
+        }
+
+        .searchProduct, .products, .costs{
+            width: 96%;
+            margin: 2%;
+        }
+
+        .searchProduct{
+            display: grid;
+            grid-template-columns: 20% 50%;
+            grid-gap: 5%;
+        }
+
+        .products{
+
+            .tableProducts{
+                width: 100%;
+                .headersTable{
+                    background-color: #1B9C85;
+                    height: 30px;
+                }
+                .bodyTable{
+                    background-color: $colorText;
+                    color: $colorNav;
+                    height: 30px;
+                }
+            }
+        }
+        .costs{
+            display: grid;
+            grid-template-columns: 20% 20% 20% 10%;
+            grid-column-gap: 3%;
+            grid-template-rows: 100%;
+        }
     }
 
 }
@@ -212,6 +250,7 @@ $colorNav: #212121;
 .footerMain{
     background-color: $colorOpacity;
     width: 100%;
+    position: fixed;
     height: auto;
     display: flex;
     align-items: center;
